# CPlus

./: .editorconfig  .gitignore  Makefile  README.md  commands.h  compile_commands.json  config.mk  die.c  die.h  hashmap.c  hashmap.h  main.c  meson.build  read_block.c  read_block.h  tags
.github/workflows/: master.yml
include/: die.h
include/util/: hashmap.h  printer.h  reader.h
src/: meson.build
src/cli/: main.c  meson.build
src/lib/: die.c  hashmap.c  main.old.c  meson.build  print.h
src/lib/util/: hashmap.c  printer.c  reader.c
test/: cat.hp  main.c  main.cp  meson.build
test/test-files/: cat.cp  main.cp
